# connector

./: .gitignore  setup.cfg
docker/: Dockerfile  docker-compose.yml
src/connector/: .communication.py.swp  __main__.py  backend_connector.py  communication.py  config.conf  exceptions.py  http_server.py  status_handler.py  task_models.py  venv.conf
