[options]
package_dir =
    = src
packages = find:
install_requires = 
    starlette_exporter
    fastapi
    pydantic
    uvicorn
    configargparse

[options.extras_require]
dev =
    nox
    black
    isort
    mypy
    flake8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    connector = connector.__main__:main

[bdist_wheel]
universal = 1
